# sftp-client

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CMakePresets.json.bak  CMakeUserPresets.json  CMakeUserPresets.json.bak  CustomEnvironment.cmake  README.md  main.cpp
Includes/: DirectoryCache.h  DirectoryEntry.h  HandleDeleter.h  TransferFile.h  TransferHandle.h  TransferJob.h  TransferManager.h  TransferStatus.h  UIDGenerator.h  mainGui.h
Includes/Qt/: FileSystem.h  IconManager.h  MainWindowWidget.h  ThreadPool.h  TreeView.h  WorkerThread.h  mainGui.h
Includes/Utilities/: Commons.h  Logger.h  MeasureHelper.h
Resources/: Resources.qrc
Sources/: DirectoryCache.cpp  TransferHandle.cpp  TransferJob.cpp  TransferManager.cpp  TransferStatus.cpp  mainGui.cpp
Sources/Qt/: FileSystem.cpp  ThreadPool.cpp  TreeView.cpp  mainGui.cpp
Sources/Utilities/: Logger.cpp
moc/: moc_mainGui.cpp
